@@ -5,6 +5,7 @@ RealOpInsight ChangeLog
 2.4.0beta1 (Federator,b2)
   * Fixed ticket #16: adding support for realm authentication within the browser
   * Fixed ticket #17: file path missing in the title bar of the console
+  * Fixed to make browser always load the first source used in the selected view
 
 2.4.0beta1 (Federator,b1)
   * Improved support for overriding SSL peer verification
